<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    tools:context="com.bmsit.marzil.riderapp.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logintext"/>
    <EditText
        android:layout_margin="8dp"
        android:id="@+id/loginid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/idhint"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginpass"/>
    <EditText
        android:layout_margin="8dp"
        android:id="@+id/loginpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passhint"/>
    <Button
        android:layout_margin="8dp"
        android:id="@+id/signin"
        android:text="@string/loginbut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_margin="8dp"
        android:id="@+id/signup"
        android:text="@string/signupbut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>
